# crucible-ttc

./: .env.example  .gitattributes  .gitignore  DESIGN.md  PROGRESS.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
configs/: beam-sweep.yaml  lift-curve.yaml  real-quickstart.yaml  results.yaml  sample-sweep.yaml  sample.yaml
docs/: README.md  RESULTS.md
docs/adr/: 0001-record-architecture-decisions.md  0002-ports-and-adapters-with-compute-accounting.md
src/crucible/: __init__.py  __main__.py  analyze.py  cli.py  config.py  report.py  runner.py  segment.py  stats.py  sweep.py  synthetic_stepwise.py
src/crucible/data/: __init__.py  registry.py  sample.py
src/crucible/domain/: __init__.py  ports.py  types.py
src/crucible/inference/: __init__.py  cassette.py  mock.py  ollama.py
src/crucible/search/: __init__.py  beam.py  mcts.py  pass1.py  registry.py
src/crucible/verify/: __init__.py  answer_extract.py  math_outcome.py
tests/: test_analyze.py  test_answer_extract.py  test_beam.py  test_best_of_n.py  test_cassette.py  test_compute.py  test_math_outcome.py  test_mcts.py  test_run_sample.py  test_segment.py  test_stepwise.py  test_sweep.py  test_synthetic.py
tests/fixtures/: gsm8k-m1.json
