[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crucible"
version = "0.1.0"
description = "A verifier-guided reasoning engine: search (best-of-N, beam, MCTS) over reasoning traces to turn test-time compute into measured accuracy."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Satchel Hamilton" }]
keywords = ["llm", "reasoning", "test-time-compute", "mcts", "verifier", "prm"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Base deps are intentionally light: the M0 spine (CLI, config, ports, math
# verifier, reporting) runs with no GPU, no network, no heavy ML libs. The big
# stuff (datasets, transformers/torch, vLLM) lives in extras below.
dependencies = [
    "typer>=0.12,<0.16",
    "rich>=13.7,<15",
    "pyyaml>=6.0,<7",
    "httpx>=0.27,<0.29",
    "math-verify>=0.5,<1",
    "sympy>=1.12,<2",
    "numpy>=1.26,<3",
    "pandas>=2.1,<3",
    "matplotlib>=3.8,<4",
]

[project.optional-dependencies]
# HuggingFace dataset loaders (GSM8K, MATH-500, HumanEval, MBPP) — M1+.
datasets = ["datasets>=2.19,<4"]
# Process-reward model scoring needs per-step logits → transformers/torch — M3+.
prm = ["torch>=2.2", "transformers>=4.44", "accelerate>=0.30"]
# High-throughput batched sampling + logprobs (WSL2/cloud GPU) — optional backend.
vllm = ["vllm>=0.5"]
# Dev tooling: the cheap guardrails the build loop runs every milestone.
dev = [
    "pytest>=8.0,<9",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
    "types-PyYAML>=6.0",
]

[project.scripts]
crucible = "crucible.cli:main"

[project.urls]
Homepage = "https://github.com/satchamilton/crucible"

[tool.hatch.build.targets.wheel]
packages = ["src/crucible"]

# --- Tooling -----------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "N", "C4"]
# math-verify wants LaTeX-ish strings; allow them. Tests may have long lines.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N806"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
warn_unused_configs = true

# Third-party libs without bundled type stubs — don't fail strict mode on them.
# Add modules here as the milestones that import them land (datasets, transformers,
# torch, matplotlib, vllm, …).
[[tool.mypy.overrides]]
module = [
    "math_verify.*",
    "sympy.*",
]
ignore_missing_imports = true
